= Changelog

== Version 2.0.2

[small]#Released at xx.xx.xxxx#

* https://github.com/svenkubiak/mangooio/issues/91[#91] Added numeric validation (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/89[#89] Added Internal Server Error to Response class (svenkubiak)

== Version 2.0.1

[small]#Released at 13.12.2015#

* Fixed bug in documentation asciidoc file (svenkubiak)

== Version 2.0.0

[small]#Released at 13.12.2015#

* https://github.com/svenkubiak/mangooio/issues/79[#79] Add Server-Sent Events handler (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/78[#78] Switched to plugin and dependency management in root pom.xml (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/69[#69] Restructured integration tests (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/76[#76] Improved handling of values in forms (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/77[#77] Added option for adding custom cookies (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/75[#75] Fixed bug that did not handle remember in authentication correctly (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/74[#74] Refactored test utilities (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/64[#64] Move to log4j2 for logging (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/53[#53] Extracted Mailer to own extension (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/66[#66] Removed all redundant legacy code  (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/45[#45] Removed all @deprecated methods and classes (svenkubiak)
* Refactored routing mechanism to routes.yaml file (svenkubiak)
* Code cleanup, refactorings and more JavaDoc (svenkubiak)
* Updated Documentation (svenkubiak)
* Version bumps (svenkubiak)
** undertow-core 1.3.3.Final -> 1.3.10.Final
** guava 18.0 -> 19.0
** fluent-hc 4.4.1 -> 4.5.1
** fluentlenium-core 0.10.3 -> 0.10.8
** json-path 2.0.0 -> 2.1.0

== Version 1.3.2
